--- a/src/components/SignupFormStep2.css
+++ b/src/components/SignupFormStep2.css
@@ -11,18 +11,18 @@
 }
 
 .signup-container::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 150%;
   height: 150%;
-  background: url('../assets/Logo.png') no-repeat center center;
+  background: url("../assets/Logo.png") no-repeat center center;
   background-size: cover;
-  opacity: 0.2; 
+  opacity: 0.2;
   z-index: -1;
 }
 
 .signup-container::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -152,9 +152,11 @@
   color: white;
 }
 
-.social-btn.instagram {
-  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+.social-icon {
   color: white;
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
 }
 
 .login-link {
